--- a/project_qusasa/qusasa/templates/features_pages/competitive_analysis/competitive_analysis_details.html
+++ b/project_qusasa/qusasa/templates/features_pages/competitive_analysis/competitive_analysis_details.html
@@ -51,6 +51,8 @@
 
 
 .overlay {
+    z-index: 1000;
+
     position: fixed;
     top: 0;
     bottom: 0;
@@ -79,7 +81,7 @@
           </style>
   </head>
   <body>
-    <!-- <img class="polygon" src="{% static 'qusasa/images/Frame 2.png'%}" alt="Description of Image" class="full-size-absolute"> -->
+    <!-- <img class="polygon" src="{% static 'qusasa/images/Frame2.png'%}" alt="Description of Image" class="full-size-absolute"> -->
 
     <!--   <div class="navigation">
         <img class="static-img" src="{% static 'qusasa/images/qusasa.png' %}" alt="">
@@ -151,6 +153,5 @@
     
 
     <!-- Linking JS at the bottom for better performance -->
-    <script src="{% static 'qusasa/js/script.js' %}"></script>
   </body>
 </html>
