--- a/project_qusasa/qusasa/static/qusasa/css/login.css
+++ b/project_qusasa/qusasa/static/qusasa/css/login.css
@@ -17,7 +17,6 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    background-image: url("static/images/Frame 2.png");
     background-repeat: no-repeat; /* Prevent gradient from repeating */
     background-attachment: fixed;
     display: flex;
@@ -214,6 +213,7 @@ body {
 
 
 .overlay {
+    z-index: 1000;
     position: fixed;
     top: 0;
     bottom: 0;
