--- a/project_qusasa/qusasa/static/qusasa/css/signup.css
+++ b/project_qusasa/qusasa/static/qusasa/css/signup.css
@@ -19,7 +19,6 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    background-image: url("static/images/Frame 2.png");
     background-repeat: no-repeat; /* Prevent gradient from repeating */
     background-attachment: fixed;
     display: flex;
@@ -199,6 +198,8 @@ body {
 
 
 .overlay {
+    z-index: 1000;
+
     position: fixed;
     top: 0;
     bottom: 0;
@@ -208,6 +209,8 @@ body {
     transition: opacity 500ms;
     visibility: hidden;
     opacity: 0;
+    z-index: 1000;
+
   }
   .overlay:target {
     visibility: visible;
