--- a/project_qusasa/qusasa/static/qusasa/css/simple_form.css
+++ b/project_qusasa/qusasa/static/qusasa/css/simple_form.css
@@ -221,6 +221,8 @@ body {
     transition: opacity 500ms;
     visibility: hidden;
     opacity: 0;
+    z-index: 1000;
+
   }
   .overlay:target {
     visibility: visible;
