--- a/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_details.html
+++ b/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_details.html
@@ -51,6 +51,8 @@
 
 
 .overlay {
+  z-index: 1000;
+
   position: fixed;
   top: 0;
   bottom: 0;
@@ -140,6 +142,5 @@
   </div>
 
     <!-- Linking JS at the bottom for better performance -->
-    <script src="{% static 'qusasa/js/script.js' %}"></script>
   </body>
 </html>
