--- a/project_qusasa/qusasa/templates/instafeatures_pages/profile_analysis/profile_analysis_details.html
+++ b/project_qusasa/qusasa/templates/instafeatures_pages/profile_analysis/profile_analysis_details.html
@@ -50,6 +50,8 @@
 
 
 .overlay {
+    z-index: 1000;
+
     position: fixed;
     top: 0;
     bottom: 0;
@@ -80,7 +82,7 @@
 
   
   <body>
-    <!-- <img class="polygon" src="{% static 'qusasa/images/Frame 2.png'%}" alt="Description of Image" class="full-size-absolute"> -->
+    <!-- <img class="polygon" src="{% static 'qusasa/images/Frame2.png'%}" alt="Description of Image" class="full-size-absolute"> -->
 
     <!--   <div class="navigation">
         <img class="static-img" src="{% static 'qusasa/images/qusasa.png' %}" alt="">
@@ -149,6 +151,5 @@
     </div>
 
     <!-- Linking JS at the bottom for better performance -->
-    <script src="{% static 'qusasa/js/script.js' %}"></script>
   </body>
 </html>
