--- a/project_qusasa/qusasa/templates/admin/inquiries.html
+++ b/project_qusasa/qusasa/templates/admin/inquiries.html
@@ -52,7 +52,7 @@
             <a href="{% url 'logout' %}">Log out</a>
         </div>
     </div> -->
-    <a class="log-out" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i>  Log out</a>
+    <a class="log-out" href="{% url 'logoutad' %}"><i class="fa-solid fa-right-from-bracket"></i>  Log out</a>
 
     <div class="hamburger">
         <div class="bar"></div>
