--- a/project_qusasa/qusasa/templates/admin/base.html
+++ b/project_qusasa/qusasa/templates/admin/base.html
@@ -14,7 +14,7 @@
 
 <body> 
 
-    <a class="log-out" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i>  Log out</a>
+    <a class="log-out" href="{% url 'logoutad' %}"><i class="fa-solid fa-right-from-bracket"></i>  Log out</a>
 
     <div class="hamburger">
         <div class="bar"></div>
