--- a/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_output.html
+++ b/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_output.html
@@ -680,6 +680,8 @@
             <div class="manipulate" style="width: 90%; margin-top:3rem;" id="section5">
                 <h1>Modify Your Datasets</h1>
                 <h3>Need to tweak your datasets? Whether it's removing a column, combining two columns, making formatting adjustments, creating new columns with feature engineering, or anything else you can dream up, we're here to help! Let us know how you'd like to modify your data, and we'll make it happen.</h3>
+                <p>Disclaimer: please recheck the results of the AI response, even though we ensure to use the best models, it may not be 100% accurate.</p>
+
                 <div class="ask-Ai" style="margin-top: 3rem; display:flex; flex-direction:column;">
                     <div class="col" style="display:flex; flex-direction: row; width: 100%; margin:0; justify-content:center; align-items:start;">
                         <div class="suggestions" style="margin-right: 3rem;">
@@ -925,7 +927,7 @@
                     
                     {%if top_5_comments%}
                     <div class="emotions_radchart" style="margin-bottom: 5rem; margin-top: 5rem;">
-                        <h1 data-aos="fade-up">Comments emotions distribution</h1>
+                        <h1 data-aos="fade-up">Commetns emotions distribution</h1>
                     <p data-aos="fade-up">Get a deeper understanding of why the viewers likes this content through comments sentiment analysis</p>
                     <div id="emotions_radchart" data-aos="fade-up"></div>
                     </div>
@@ -1026,6 +1028,8 @@
                             <h2>Learn more about your Datasets!</h2>
                             <p>Tap on the datasets listed below to uncover detailed description of their fields and to get inspired by suggestions for questions you can explore with:
                             </p>
+                            <p>Disclaimer: please recheck the results of the AI response, even though we ensure to use the best models, it may not be 100% accurate.</p>
+
                             <div class="datasets-info">
                                 <div class="dataset" onclick="showDatasetInfo('ChannelVideos')">
                                     <i class="fa-solid fa-table"></i>
@@ -1127,6 +1131,7 @@
                         <div class="explanation">
                             <img src="{% static 'qusasa/images/Qusasa end.png' %}"  alt="Floating Image">
                             <span>Generate Graphs With AI</span> allows you to step into the fun world of data visualization with us. Pick a dataset you like and imagine any chart you want to bring to life. Want to add a personal touch? Feel free to play with font sizes, pick your favorite colors for the graph, and choose a font style that really represents your vibe. We're here to make exploring data easy and enjoyable for everyone. So, let's start crafting your perfect chart together!
+                            <p>Disclaimer: please recheck the results of the AI response, even though we ensure to use the best models, it may not be 100% accurate.</p>
                         </div>
                         <div class="datasets">
                             <h2>Learn more about your Datasets!</h2>
